--- a/src/Ssm.Aws.Cli/Ssm.Aws.Cli.csproj
+++ b/src/Ssm.Aws.Cli/Ssm.Aws.Cli.csproj
@@ -5,6 +5,11 @@
         <TargetFramework>net6.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <AssemblyName>ssm-aws-cli</AssemblyName>
     </PropertyGroup>
+
+    <ItemGroup>
+        <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.0" />
+    </ItemGroup>
 
 </Project>
