--- a/src/Ssm.Aws.ClientTool/Ssm.Aws.ClientTool.csproj
+++ b/src/Ssm.Aws.ClientTool/Ssm.Aws.ClientTool.csproj
@@ -6,6 +6,7 @@
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
         <AssemblyName>ssm-aws-cli</AssemblyName>
+        <RootNamespace>Ssm.Aws.ClientTool</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
