--- a/src/Aws.Ssm.ClientTool/Aws.Ssm.ClientTool.csproj
+++ b/src/Aws.Ssm.ClientTool/Aws.Ssm.ClientTool.csproj
@@ -10,7 +10,12 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.0" />
+        <PackageReference Include="Amazon.Extensions.Configuration.SystemsManager" Version="5.1.0" />
+        <PackageReference Include="ConsoleTables" Version="2.4.2" />
+        <PackageReference Include="Figgle" Version="0.5.1" />
+        <PackageReference Include="Kurukuru" Version="1.4.2" />
+        <PackageReference Include="Microsoft.Extensions.Hosting" Version="7.0.1" />
+        <PackageReference Include="Sharprompt" Version="2.4.5" />
     </ItemGroup>
 
     <ItemGroup>
