run command impl - not final

--- a/src/Aws.Ssm.ClientTool/Properties/launchSettings.json
+++ b/src/Aws.Ssm.ClientTool/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "Aws.Ssm.ClientTool": {
       "commandName": "Project",
-      "commandLineArgs": "config"
+      "commandLineArgs": "run"
     }
   }
 }
