--- a/src/Aws.Ssm.ClientTool/Aws.Ssm.ClientTool.csproj
+++ b/src/Aws.Ssm.ClientTool/Aws.Ssm.ClientTool.csproj
@@ -14,8 +14,8 @@
         <PackageReference Include="Figgle" Version="0.5.1" />
         <PackageReference Include="Kurukuru" Version="1.4.2" />
         <PackageReference Include="Microsoft.Extensions.Hosting" Version="7.0.1" />
+        <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
         <PackageReference Include="Sharprompt" Version="2.4.5" />
-        <PackageReference Include="Utf8Json" Version="1.3.7" />
     </ItemGroup>
 
     <ItemGroup>
