user files provider fix

--- a/src/Aws.Ssm.Cli/Properties/launchSettings.json
+++ b/src/Aws.Ssm.Cli/Properties/launchSettings.json
@@ -4,7 +4,7 @@
       "commandName": "Project",
       "commandLineArgs": "",
       "environmentVariables": {
-        "DOTNET_ENVIRONMENT": "Development"
+        //"USER_FOLDER_PATH": "." // Using for the debugging only
       }
     }
   }
