--- a/src/Aws.Ssm.Cli/Aws.Ssm.Cli.csproj
+++ b/src/Aws.Ssm.Cli/Aws.Ssm.Cli.csproj
@@ -16,6 +16,7 @@
         <PackageReference Include="Microsoft.Extensions.Hosting" Version="7.0.1" />
         <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
         <PackageReference Include="Sharprompt" Version="2.4.5" />
+        <PackageReference Include="TextCopy" Version="6.2.1" />
     </ItemGroup>
 
     <ItemGroup>
