client script impl

--- a/src/Aws.Ssm.Cli/Aws.Ssm.Cli.csproj
+++ b/src/Aws.Ssm.Cli/Aws.Ssm.Cli.csproj
@@ -23,6 +23,12 @@
         <None Update="appsettings.json">
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </None>
+        <None Update="ascli">
+          <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </None>
+        <None Update="ascli.bat">
+          <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </None>
     </ItemGroup>
 
 
