--- a/src/Aws.Ssm.Cli.Installer/Aws.Ssm.Cli.Installer.csproj
+++ b/src/Aws.Ssm.Cli.Installer/Aws.Ssm.Cli.Installer.csproj
@@ -5,7 +5,7 @@
         <TargetFramework>net6.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
-        <AssemblyName>installer</AssemblyName>
+        <AssemblyName>Installer</AssemblyName>
         <ApplicationManifest>app.manifest</ApplicationManifest>
     </PropertyGroup>
 
