create_tool/isntaller_impl (#16)
* fix script resolving

* fix ssm configuration

* fix configuration handler

* output profile fix

* internal code review

* internal code review

* add import json command

* import/export fix

* add version service check stub

* client script impl

* create empty installer project

* fix publisher environment

* add impl

* application service path fix

* finalize installer

* installer fixation

* fix ascli argument

* fix

* fix

* readme fix

* internal code review

--- a/src/Aws.Ssm.Cli/Aws.Ssm.Cli.csproj
+++ b/src/Aws.Ssm.Cli/Aws.Ssm.Cli.csproj
@@ -16,12 +16,21 @@
         <PackageReference Include="Microsoft.Extensions.Hosting" Version="7.0.1" />
         <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
         <PackageReference Include="Sharprompt" Version="2.4.5" />
+        <PackageReference Include="TextCopy" Version="6.2.1" />
     </ItemGroup>
 
     <ItemGroup>
         <None Update="appsettings.json">
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </None>
+        <None Update="ascli">
+          <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </None>
+        <None Update="ascli.bat">
+          <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </None>
     </ItemGroup>
+
+
 
 </Project>
