Got rid of prebuilt binaries

--- a/src/Aws.Ssm.Cli.Installer/Properties/launchSettings.json
+++ b/src/Aws.Ssm.Cli.Installer/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "Aws.Ssm.Cli.Installer": {
       "commandName": "Project",
-      "commandLineArgs": "--buildWorkingDirectory ../../../../../ --appHomePath app"
+      "commandLineArgs": "--buildWorkingDirectory . --appHomePath app"
     }
   }
 }
