--- a/src/Aws.Ssm.Cli/Aws.Ssm.Cli.csproj
+++ b/src/Aws.Ssm.Cli/Aws.Ssm.Cli.csproj
@@ -14,6 +14,7 @@
         <PackageReference Include="Figgle" Version="0.5.1" />
         <PackageReference Include="Kurukuru" Version="1.4.2" />
         <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
+        <PackageReference Include="Microsoft.Extensions.Http" Version="8.0.1" />
         <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
         <PackageReference Include="Sharprompt" Version="2.4.5" />
         <PackageReference Include="TextCopy" Version="6.2.1" />
